# wdisplays

./: .clang-format  .gitignore  CHANGELOG.md  README.md  meson.build
PKGBUILD/: PKGBUILD  wdisplays-persistent.install
po/: POTFILES.in  meson.build  network.cycles.wdisplays.pot  ru.po
protocol/: meson.build
resources/: wdisplays.desktop.in
src/: main.c  meson.build  outputs.c  store.c  wdisplays.h
